<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FriendActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:id="@+id/tableLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_textView2">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    style="@style/TextBold"
                    android:text="@string/nama_lengkap" />

                <TextView
                    android:id="@+id/tv_dataPerson"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    style="@style/TextBold"
                    android:text="@string/kelas" />

                <TextView
                    android:id="@+id/tv_dataClasses"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    style="@style/TextBold"
                    android:text="@string/divisi" />

                <TextView
                    android:id="@+id/tv_dataDivisi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextBold"
                    android:layout_marginEnd="16dp"
                    android:text="@string/motto" />

                <TextView
                    android:id="@+id/tv_dataMotto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    style="@style/TextBold"
                    android:text="@string/instagram" />

                <TextView
                    android:id="@+id/tv_dataInstagram"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="" />

            </TableRow>

        </TableLayout>

        <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="301dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gradient" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageFriend"
        android:layout_width="244dp"
        android:layout_height="252dp"
        android:layout_marginTop="104dp"
        tools:src="@tools:sample/avatars"
        app:civ_border_color="#FF000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/tv_short_name"
        style="@style/TextContent.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="@+id/imageFriend"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/imageFriend"
        app:layout_constraintTop_toBottomOf="@+id/imageFriend" />

        <TextView
            android:id="@+id/tv_textView2"
            style="@style/TextBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/description"
            app:layout_constraintStart_toStartOf="@+id/tableLayout2"
            app:layout_constraintTop_toBottomOf="@+id/tv_short_name" />


        <TextView
            android:id="@+id/tv_detail_person"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingBottom="50dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="@+id/tableLayout2"
            app:layout_constraintStart_toStartOf="@+id/tableLayout2"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>